vanilla-panda-blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: panda-blog
  namespace: other-branch
  labels:
    monokle.io/demo: vanilla-panda-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: panda-blog
  template:
    metadata:
      labels:
        app: panda-blog
    spec:
      containers:
        - name: panda-blog
          image: panda-blog:latest
          ports:
            - name: http-web
              containerPort: 8080
